# yield-liquidator-v2

./: .gitignore  ARCHITECTURE.wsd  Cargo.toml  Dockerfile  README.md  TESTNET.md  build.rs  hardhat.config.ts  package.json  tsconfig.json
abis/: AccessControl.json  CTokenChiMock.json  CTokenRateMock.json  ChainlinkAggregatorV3Mock.json  CompositeMultiOracle.json  DaiAbstract.json  DaiMock.json  ERC20.json  ERC20Permit.json  FYToken.json  FlashLiquidator.json  ICauldron.json  ICurveStableSwap.json  IFYToken.json  IJoin.json  IJoinFactory.json  ILadle.json  IOracle.json  IPeripheryPayments.json  IPool.json  ISourceMock.json  ISwapRouter.json  ITimelock.json  IUniswapV3Pool.json  IUniswapV3PoolDerivedState.json  IUniswapV3PoolEvents.json  IWETH9.json  IWitch.json  IWstEth.json  Join.json  Ladle.json  LadleStorage.json  OracleMock.json  PeripheryPayments.json  Router.json  SafeERC20Namer.json  StETHMock.json  Timelock.json  USDCMock.json  USDTMock.json  (+4 more)
aws/: 00.deploy_cluster.sh  01.deploy_roles.sh  02.deploy_secrets.sh  03.deploy.sh  README.md  dashboard_encode.py  index.html  liquidator-task.json  liquidator.sh  task-execution-role.json
contracts/: AdressesRegistry.sol  CallbackValidation.sol  ChainlinkAggregatorV3Mock.sol  Cvx3CrvFlashLiquidator.sol  Flash.sol  FlashLiquidator.sol  FraxLiquidator.sol  IAddressRegistry.sol  IBaseRewardPool.sol  ICurveStableSwap.sol  IMulticall2.sol  ISwapRouter.sol  IUniswapV3Flash.sol  IUniswapV3Pool.sol  IWstEth.sol  IYvToken.sol  PoolAddress.sol  SwapperSteth.sol  TransferHelper.sol  TypechainImporter.sol  UniPoolAddress.sol  (+6 more)
(+39 files in other folders)
