[package]
name = "yield-liquidator"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"
default-run = "liquidator"

[dependencies]
anyhow = "1.0.32"
ethers = { version = "0.5.2", features=["ws", "openssl"] }
ethers-core = { version = "0.5.3" }
exitcode = "1.1.2"
futures-util = "0.3.19"
hex = "0.4.3"
serde_json = "1.0.57"
serde_with = "1.10.0"
tokio = { version = "1.11.0", features = ["full"] }
async-process = "1.3.0"

# CLI
gumdrop = "0.8.0"
# Logging
tracing = "0.1.29"
tracing-subscriber = {version="0.2.25", features =["default", "json"]}
serde = "1.0.130"
thiserror = "1.0.20"

[build-dependencies]
ethers = { version = "0.5.2", features = ["abigen"] }